Refactor 1