@@ -3,9 +3,9 @@ package ua.ies.api.controller;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.keycloak.representations.idm.UserRepresentation;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
@@ -14,6 +14,7 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import ua.ies.api.dto.CreateFarmerRequest;
 import ua.ies.api.dto.CreateFarmerResponse;
+import ua.ies.api.dto.FarmDTO;
 import ua.ies.api.dto.FarmerResponse;
 import ua.ies.api.dto.UpdateFarmerRequest;
 import ua.ies.api.service.FarmService;
@@ -32,8 +33,7 @@ public class ManagerController {
     @PreAuthorize("hasRole('manager')")
     @Operation(summary = "Create farmer")
     public ResponseEntity<CreateFarmerResponse> createFarmer(@RequestBody CreateFarmerRequest request) {
-        CreateFarmerResponse response = keycloakService.createFarmer(request);
-        return ResponseEntity.ok(response);
+        return ResponseEntity.status(HttpStatus.CREATED).body(keycloakService.createFarmer(request));
     }
 
     @GetMapping("/farmers")
@@ -42,19 +42,19 @@ public class ManagerController {
     public ResponseEntity<List<FarmerResponse>> getFarmersList() {
         List<UserRepresentation> keycloakFarmers = keycloakService.getAllFarmers();
 
-        List<FarmerResponse> response = keycloakFarmers.stream().map(kcUser -> {
-            FarmerResponse farmer = new FarmerResponse();
-            farmer.setId(kcUser.getId());
-            farmer.setFirstName(kcUser.getFirstName());
-            farmer.setLastName(kcUser.getLastName());
-            farmer.setEmail(kcUser.getEmail());
-
-            farmer.setFarms(farmService.getFarmsByFarmer(kcUser.getId()));
-
-            return farmer;
-        }).collect(Collectors.toList());
+        List<FarmerResponse> response = keycloakFarmers.stream()
+                .map(u -> new FarmerResponse(u.getId(), u.getFirstName(), u.getLastName(), u.getEmail(),
+                        farmService.getFarmsByFarmer(u.getId())))
+                .toList();
 
         return ResponseEntity.ok(response);
+    }
+
+    @GetMapping("/farmers/{farmerId}/farms")
+    @PreAuthorize("hasAnyRole('manager', 'farmer')")
+    @Operation(summary = "Get farmer's farms")
+    public ResponseEntity<List<FarmDTO>> getFarmsByFarmer(@PathVariable String farmerId) {
+        return ResponseEntity.ok(farmService.getFarmsByFarmer(farmerId));
     }
 
     @DeleteMapping("/farmers/{id}")
@@ -70,6 +70,6 @@ public class ManagerController {
     @Operation(summary = "Update a farmer")
     public ResponseEntity<Void> updateFarmer(@PathVariable String id, @RequestBody UpdateFarmerRequest request) {
         keycloakService.updateFarmer(id, request);
-        return ResponseEntity.ok().build();
+        return ResponseEntity.noContent().build();
     }
 }
